--- a/index.html
+++ b/index.html
@@ -184,35 +184,32 @@
                 <img src="https://placehold.co/400x300/c4b5fd/1f2937?text=Three+Money+Buckets" class="rounded-2xl shadow-lg w-full" alt="Three Money Buckets Illustration">
             </div>
         </section>
-        
-        <!-- Section 5: Credit Basics -->
+
+        <!-- Section 5: Investing 101 -->
         <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
-                <div class="icon bg-red-100 rounded-full flex items-center justify-center mb-4">
-                    <svg class="w-12 h-12 text-red-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4 4a2 2 0 00-2 2v6a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2h-1.172a2 2 0 01-1.414-.586l-.828-.828A2 2 0 009.172 3H8a2 2 0 00-2 2v1H4z"></path>
-                        <path d="M16 4h-2a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6a2 2 0 012-2h2V3a1 1 0 011-1h1a1 1 0 011 1v1h1a2 2 0 012 2v1h1a2 2 0 012 2v1a2 2 0 01-2 2h-1a1 1 0 01-1-1v-1a1 1 0 01-1-1z"></path>
+                <div class="icon bg-teal-100 rounded-full flex items-center justify-center mb-4">
+                    <svg class="w-12 h-12 text-teal-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"></path>
+                        <path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd"></path>
                     </svg>
                 </div>
-                <h2 class="text-3xl font-bold text-gray-800">Credit Basics</h2>
-                <p class="mt-2 text-gray-600">Learn how to build a strong credit history for your future car, home, and loans.</p>
+                <h2 class="text-3xl font-bold text-gray-800">Investing 101</h2>
+                <p class="mt-2 text-gray-600">Make your money work for you by understanding these simple principles.</p>
                 <ul class="mt-4 text-left text-gray-700 w-full space-y-1">
                     <li class="flex items-start">
-                        <span class="text-green-500 font-bold mr-2">&#10003;</span> Pay your credit card in full every month
+                        <span class="text-green-500 font-bold mr-2">&#10003;</span> **Start simple:** broad, low-cost index funds beat stock picking for beginners.
                     </li>
                     <li class="flex items-start">
-                        <span class="text-green-500 font-bold mr-2">&#10003;</span> Keep utilization low
-                    </li>
-                    <li class="flex items-start">
-                        <span class="text-green-500 font-bold mr-2">&#10003;</span> Be an authorized user
+                        <span class="text-green-500 font-bold mr-2">&#10003;</span> **Small, steady contributions** compound over time.
                     </li>
                 </ul>
             </div>
             <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/fca5a5/1f2937?text=Credit+Score+Meter" class="rounded-2xl shadow-lg w-full" alt="Credit Score Meter Illustration">
+                <img src="https://placehold.co/400x300/2dd4bf/1f2937?text=Growing+Money" class="rounded-2xl shadow-lg w-full" alt="Growing Money Illustration">
             </div>
         </section>
-
+        
         <!-- Section 6: Your Best Savings Tool -->
         <section class="flex flex-col md:flex-row-reverse items-center justify-center md:space-x-reverse md:space-x-8 space-y-8 md:space-y-0">
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
@@ -246,6 +243,34 @@
             <p class="mt-2 text-lg text-gray-600 text-center">Saving just $200 per month can make you a millionaire. But fees can cost you years of growth!</p>
             <div class="card w-full p-6">
                 <canvas id="compoundingChart"></canvas>
+            </div>
+        </section>
+
+        <!-- Section 8: Credit Basics -->
+        <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
+                <div class="icon bg-red-100 rounded-full flex items-center justify-center mb-4">
+                    <svg class="w-12 h-12 text-red-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4 4a2 2 0 00-2 2v6a2 2 0 002 2h8a2 2 0 002-2V8a2 2 0 00-2-2h-1.172a2 2 0 01-1.414-.586l-.828-.828A2 2 0 009.172 3H8a2 2 0 00-2 2v1H4z"></path>
+                        <path d="M16 4h-2a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6a2 2 0 012-2h2V3a1 1 0 011-1h1a1 1 0 011 1v1h1a2 2 0 012 2v1h1a2 2 0 012 2v1a2 2 0 01-2 2h-1a1 1 0 01-1-1v-1a1 1 0 01-1-1z"></path>
+                    </svg>
+                </div>
+                <h2 class="text-3xl font-bold text-gray-800">Credit Basics</h2>
+                <p class="mt-2 text-gray-600">Learn how to build a strong credit history for your future car, home, and loans.</p>
+                <ul class="mt-4 text-left text-gray-700 w-full space-y-1">
+                    <li class="flex items-start">
+                        <span class="text-green-500 font-bold mr-2">&#10003;</span> **Use a credit card only if you can pay in full every month.**
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-green-500 font-bold mr-2">&#10003;</span> **Keep utilization low** (goal: under 30%, ideally under 10%).
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-green-500 font-bold mr-2">&#10003;</span> **On-ramps:** authorized user with a responsible adult or a low-limit starter card at 18.
+                    </li>
+                </ul>
+            </div>
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/fca5a5/1f2937?text=Credit+Score+Meter" class="rounded-2xl shadow-lg w-full" alt="Credit Score Meter Illustration">
             </div>
         </section>
 
@@ -393,3 +418,4 @@
     </script>
 </body>
 </html>
+
