--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
         <!-- Section 1: Paycheck Decoder -->
         <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/a3e635/1f2937?text=Your+Paycheck+Breakdown" class="rounded-2xl shadow-lg w-full" alt="Paycheck Breakdown Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-blue-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-blue-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -63,13 +66,13 @@
                     </li>
                 </ul>
             </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/a3e635/1f2937?text=Your+Paycheck+Breakdown" class="rounded-2xl shadow-lg w-full" alt="Paycheck Breakdown Illustration">
-            </div>
         </section>
 
         <!-- Section 2: Progressive Tax System -->
-        <section class="flex flex-col md:flex-row-reverse items-center justify-center md:space-x-reverse md:space-x-8 space-y-8 md:space-y-0">
+        <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/fcd34d/1f2937?text=Tax+Buckets+Illustration" class="rounded-2xl shadow-lg w-full" alt="Tax Buckets Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-orange-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-orange-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -95,13 +98,13 @@
                     </div>
                 </div>
             </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/fcd34d/1f2937?text=Tax+Buckets+Illustration" class="rounded-2xl shadow-lg w-full" alt="Tax Buckets Illustration">
-            </div>
         </section>
 
         <!-- Section 3: Hypothetical Paycheck -->
         <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/fda4af/1f2937?text=Paycheck+Example" class="rounded-2xl shadow-lg w-full" alt="Paycheck Example Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-pink-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-pink-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -150,13 +153,13 @@
                 </div>
                 <p class="mt-4 text-xs italic text-gray-400 text-center">*As a dependent, your standard deduction is limited. The actual tax you pay on your own return may be affected. The numbers above are for illustrative purposes.</p>
             </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/fda4af/1f2937?text=Paycheck+Example" class="rounded-2xl shadow-lg w-full" alt="Paycheck Example Illustration">
-            </div>
         </section>
 
         <!-- Section 4: Simple Money System -->
-        <section class="flex flex-col md:flex-row-reverse items-center justify-center md:space-x-reverse md:space-x-8 space-y-8 md:space-y-0">
+        <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/c4b5fd/1f2937?text=Three+Money+Buckets" class="rounded-2xl shadow-lg w-full" alt="Three Money Buckets Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-purple-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-purple-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -180,13 +183,13 @@
                     </div>
                 </div>
             </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/c4b5fd/1f2937?text=Three+Money+Buckets" class="rounded-2xl shadow-lg w-full" alt="Three Money Buckets Illustration">
-            </div>
         </section>
 
         <!-- Section 5: Investing 101 -->
         <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/2dd4bf/1f2937?text=Growing+Money" class="rounded-2xl shadow-lg w-full" alt="Growing Money Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-teal-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-teal-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -205,13 +208,13 @@
                     </li>
                 </ul>
             </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/2dd4bf/1f2937?text=Growing+Money" class="rounded-2xl shadow-lg w-full" alt="Growing Money Illustration">
-            </div>
         </section>
         
         <!-- Section 6: Your Best Savings Tool -->
-        <section class="flex flex-col md:flex-row-reverse items-center justify-center md:space-x-reverse md:space-x-8 space-y-8 md:space-y-0">
+        <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/fde047/1f2937?text=Roth+IRA" class="rounded-2xl shadow-lg w-full" alt="Roth IRA Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-yellow-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-yellow-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -232,9 +235,6 @@
                     </li>
                 </ul>
             </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/fde047/1f2937?text=Roth+IRA" class="rounded-2xl shadow-lg w-full" alt="Roth IRA Illustration">
-            </div>
         </section>
 
         <!-- Section 7: Make a Million -->
@@ -248,6 +248,9 @@
 
         <!-- Section 8: Credit Basics -->
         <section class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <div class="w-full md:w-1/2">
+                <img src="https://placehold.co/400x300/fca5a5/1f2937?text=Credit+Score+Meter" class="rounded-2xl shadow-lg w-full" alt="Credit Score Meter Illustration">
+            </div>
             <div class="card p-6 flex flex-col items-center text-center w-full md:w-1/2">
                 <div class="icon bg-red-100 rounded-full flex items-center justify-center mb-4">
                     <svg class="w-12 h-12 text-red-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -268,9 +271,6 @@
                         <span class="text-green-500 font-bold mr-2">&#10003;</span> **On-ramps:** authorized user with a responsible adult or a low-limit starter card at 18.
                     </li>
                 </ul>
-            </div>
-            <div class="w-full md:w-1/2">
-                <img src="https://placehold.co/400x300/fca5a5/1f2937?text=Credit+Score+Meter" class="rounded-2xl shadow-lg w-full" alt="Credit Score Meter Illustration">
             </div>
         </section>
 
@@ -376,7 +376,16 @@
                                     label: {
                                         content: `Millionaire at Age ${16 + year10}`,
                                         enabled: true,
-                                        position: 'top'
+                                        position: 'top',
+                                        font: (context) => {
+                                            const width = context.chart.width;
+                                            const mobileWidth = 400; // Example mobile width
+                                            const baseSize = 14;
+                                            const mobileSize = 8;
+                                            return {
+                                                size: width < mobileWidth ? mobileSize : baseSize
+                                            };
+                                        }
                                     }
                                 }
                             }
@@ -391,7 +400,8 @@
                             ticks: {
                                 callback: function(val, index) {
                                   // Show every 5th label to reduce clutter
-                                  return index % 5 === 0 ? this.getLabelForValue(val) : '';
+                                  const age = 16 + index;
+                                  return age % 5 === 1 || age === 16 ? `Age ${age}` : '';
                                 }
                             }
                         },
@@ -418,4 +428,3 @@
     </script>
 </body>
 </html>
-
