--- a/index.html
+++ b/index.html
@@ -363,6 +363,15 @@
                                 weight: 'bold'
                             }
                         },
+                        tooltip: {
+                            bodyFont: {
+                                size: 16
+                            },
+                            titleFont: {
+                                size: 16
+                            },
+                            padding: 12
+                        },
                         annotation: {
                             annotations: {
                                 age51: {
@@ -399,9 +408,12 @@
                             },
                             ticks: {
                                 callback: function(val, index) {
-                                  // Show every 5th label to reduce clutter
-                                  const age = 16 + index;
-                                  return age % 5 === 1 || age === 16 ? `Age ${age}` : '';
+                                    const age = 16 + index;
+                                    // Show only a few key labels
+                                    if (age === 16 || age === 26 || age === 36 || age === 46 || age === 56 || age === 66) {
+                                        return `Age ${age}`;
+                                    }
+                                    return null;
                                 }
                             }
                         },
