--- a/index.html
+++ b/index.html
@@ -274,6 +274,22 @@
             </div>
         </section>
 
+        <!-- Section 9: The Index Card -->
+        <section class="flex flex-col items-center justify-center md:space-x-8 space-y-8 md:space-y-0">
+            <h2 class="text-4xl font-extrabold text-gray-900 text-center">Financial Advice for Life on an Index Card</h2>
+            <div class="card p-6 w-full max-w-sm">
+                <div class="bg-gray-50 rounded-lg p-4 space-y-2">
+                    <ul class="list-none space-y-2 text-lg text-gray-700 font-semibold">
+                        <li>1. Pay yourself first.</li>
+                        <li>2. Live within your means.</li>
+                        <li>3. Avoid credit card debt.</li>
+                        <li>4. Use a Roth IRA.</li>
+                        <li>5. Invest in a low-cost index fund.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <footer class="text-center mt-12 text-gray-500 text-sm">
             <p>&copy; YMSL 2025</p>
             <p>Presentation by Alex Dutra</p>
